Add Korean language option

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -20,6 +20,7 @@
     "Comments And Actions Taken": "Kommentare und eingeleitete Maßnahmen",
     "Operator": "Maschineneinrichter/-bediener",
     "Supervisor": "Schichtkoordinator",
+    "Administrator": "Administrator",
     "Machine Selector": "Auswahl Maschine",
     "Date Selector": "Auswahl Datum",
     "Shift Selector": "Auswahl Schicht",
@@ -75,9 +76,12 @@
     "operator": "Maschineneinrichter/-bediener",
     "supervisor": "Schichtkoordinator",
     "administrator": "Administrator",
-    "Administrator": "Administrator",
     "operator Sign Off": "Maschineneinrichter/-bediener amgemeldet",
     "supervisor Sign Off": "Schichtkoordinator amgemeldet",
+    "administrator Sign Off": "Administrator amgemeldet",
+    "Operator Sign Off": "Maschineneinrichter/-bediener amgemeldet",
+    "Supervisor Sign Off": "Schichtkoordinator amgemeldet",
+    "Administrator Sign Off": "Administrator amgemeldet",
     "Logged in as": "Angemeldet als",
     "Accept": "Bestätigen",
     "Cancel": "Abbrechen",
