--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -21,6 +21,7 @@
     "Comments And Actions Taken": "Comments And Actions Taken",
     "Operator": "Operator",
     "Supervisor": "Supervisor",
+    "Administrator": "Administrator",
     "Machine Selector": "Machine Selector",
     "Date Selector": "Date Selector",
     "Shift Selector": "Shift Selector",
@@ -76,9 +77,12 @@
     "operator": "Operator",
     "supervisor": "Supervisor",
     "administrator": "Administrator",
-    "Administrator": "Administrator",
     "operator Sign Off": "Operator Sign Off",
     "supervisor Sign Off": "Supervisor Sign Off",
+    "administrator Sign Off": "Administrator Sign Off",
+    "Operator Sign Off": "Operator Sign Off",
+    "Supervisor Sign Off": "Supervisor Sign Off",
+    "Administrator Sign Off": "Administrator Sign Off",
     "Logged in as": "Logged in as",
     "Accept": "Accept",
     "Cancel": "Cancel",
