--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -21,6 +21,7 @@
     "Comments And Actions Taken": "Comentarios y Acciones Tomadas",
     "Operator": "Operador",
     "Supervisor": "Supervisor",
+    "Administrator": "Administrador",
     "Machine Selector": "Selector de Máquina",
     "Date Selector": "Selector de Fecha",
     "Shift Selector": "Selector de Turno",
@@ -76,9 +77,12 @@
     "operator": "Operador",
     "supervisor": "Supervisor",
     "administrator": "Administrador",
-    "Administrator": "Administrador",
     "operator Sign Off": "Aprobación del Operador",
     "supervisor Sign Off": "Aprobación del Supervisor",
+    "administrator Sign Off": "Aprobación del Administrator",
+    "Operator Sign Off": "Aprobación del Operador",
+    "Supervisor Sign Off": "Aprobación del Supervisor",
+    "Administrator Sign Off": "Aprobación del Administrator",
     "Logged in as": "Role de",
     "Accept": "Aceptar",
     "Cancel": "Cancelar",
