--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -20,6 +20,7 @@
     "Comments And Actions Taken": "Commenti ed azioni intraprese",
     "Operator": "Operatore",
     "Supervisor": "Supervisore",
+    "Administrator": "Amministratore",
     "Machine Selector": "Selettore Macchina",
     "Date Selector": "Data Selettore",
     "Shift Selector": "Turno Selettore",
@@ -75,9 +76,12 @@
     "operator": "Operatore",
     "supervisor": "Supervisore",
     "administrator": "Amministratore",
-    "Administrator": "Amministratore",
     "operator Sign Off": "Scollega Operatore",
     "supervisor Sign Off": "Scollega Supervisore",
+    "administrator Sign Off": "Scollega Amministratore",
+    "Operator Sign Off": "Scollega Operatore",
+    "Supervisor Sign Off": "Scollega Supervisore",
+    "Administrator Sign Off": "Scollega Amministratore",
     "Logged in as": "Collegato come ",
     "Accept": "Accetta",
     "Cancel": "Cancella",
