Add word for actual

--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -11,7 +11,7 @@
     "Ideal": "이상적 목표",
     "Target Pcs.": "목표 수량",
     "Actual Pcs.": "실적 수량",
-    "Actual": "실제",
+    "Actual": "실적",
     "Cumulative Actual Pcs.": "누적 실적 수량",
     "Cumulative Actual": "누적 실적",
     "Cumulative Target": "누적 목표",
