--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -9,7 +9,7 @@
     "Part Number": "Numero Articolo",
     "Ideal": "Ideale",
     "Target Pcs.": "Target Pezzi/Metri",
-    "Target": "Target Pezzi/Metri",
+    "Target": "Target",
     "Actual Pcs.": "Valore Attuale",
     "Actual": "Valore Attuale",
     "Cumulative Actual Pcs.": "Cumulativo Attuale Pezzi/Metri",
