--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -163,5 +163,16 @@
     "Actions": "Acciones",
     "Add User": "Agregar Usuario",
     "Confirm": "Confirmar",
-    "Edit User": "Editar Usuario"
+    "Edit User": "Editar Usuario",
+    "Shift": "Turno",
+    "Name": "Nombre",
+    "Sequence": "Secuencia",
+    "Start Time": "Hora Inicial",
+    "Start Day": "Día de Inicio",
+    "End Time": "Hora Final",
+    "End Day": "Día Final",
+    "Duration (minutes)": "Duración (minutos)",
+    "Is First Shift": "Primer Turno",
+    "Add Shift": "Agregar Turno",
+    "Edit Shift": "Editar Turno"
 }
