--- a/ui/src/Utils/locale/KO.json
+++ b/ui/src/Utils/locale/KO.json
@@ -151,5 +151,18 @@
     "Duration (minutes)": "지속 (의사록)",
     "Is First Shift": "첫 번째 교대",
     "Add Shift": "시프트 추가",
-    "Edit Shift": "교대 편집"
+    "Edit Shift": "교대 편집",
+    "Site Name": "사이트 이름",
+    "Routed Cycle Time": "라우팅 된주기 시간",
+    "Lunch Minutes": "점심 시간",
+    "Production Day Offset Minutes": "생산 일 오프셋 시간",
+    "Language": "언어 ",
+    "Break Minutes": "휴식 시간",
+    "Timezone": "시간대",
+    "Operator Session Timeout": "운영자 세션 시간 초과",
+    "Assembly URL": "어셈블리 URL",
+    "Target Percent of Ideal": "이상적인 목표 비율",
+    "Vertical Dashboard Timeout": "수직 대시 보드 시간 초과",
+    "Setup Minutes": "설정 시간",
+    "Site Identifier": "사이트 식별자"
 }
