--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -187,5 +187,8 @@
     "Target Percent of Ideal": "Target Percent of Ideal",
     "Vertical Dashboard Timeout": "Vertical Dashboard Timeout",
     "Setup Minutes": "Setup Minutes",
-    "Site Identifier": "Site Identifier"
+    "Site Identifier": "Site Identifier",
+    "Workcell": "Workcell",
+    "Add Workcell": "Add Workcell",
+    "Update Workcell": "Update Workcell"
 }
