--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -187,5 +187,8 @@
     "Target Percent of Ideal": "Porcentaje Objetivo de Ideal ",
     "Vertical Dashboard Timeout": "Tiempo de Expiración del Panel Vertical",
     "Setup Minutes": "Tiempo de Configuración",
-    "Site Identifier": "Indentificador de la Planta"
+    "Site Identifier": "Indentificador de la Planta",
+    "Workcell": "Celda de Trabajo",
+    "Add Workcell": "Agregar Celda de Trabajo",
+    "Update Workcell": "Actualizar Celda de Trabajo"
 }
