--- a/ui/src/Utils/locale/IT.json
+++ b/ui/src/Utils/locale/IT.json
@@ -176,5 +176,8 @@
     "Target Percent of Ideal": "Percentuale Target dell'Ideale",
     "Vertical Dashboard Timeout": "Timeout Cruscotto Verticale",
     "Setup Minutes": "Minuti di Installazione",
-    "Site Identifier": "Identificatore del Sito"
+    "Site Identifier": "Identificatore del Sito",
+    "Workcell": "Cella di Lavoro",
+    "Add Workcell": "Aggiungi Cella di Lavoro",
+    "Update Workcell": "Aggiorna la Cella di Lavoro"
 }
