Add Unavailable Module

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -186,5 +186,8 @@
     "Asset": "Maschine",
     "Asset Display": "Maschinenanzeige",
     "Add Display": "Anzeige Hinzufügen",
-    "Update Display": "Anzeige Aktualisieren"
+    "Update Display": "Anzeige Aktualisieren",
+    "Break": "Unterbrechung",
+    "Add Break": "Pause Hinzufügen",
+    "Update Break": "Update-Pause"
 }
