Add missing translations for the new features

--- a/ui/src/Utils/locale/DE.json
+++ b/ui/src/Utils/locale/DE.json
@@ -119,9 +119,43 @@
     "All Configuration Items": "Alle Konfigurationselemente",
     "Available Configuration Items": "Verfügbare Konfigurationselemente",
     "Selected Configuration Items to": "Ausgewählte Konfigurationselemente, um",
-    
-
-
+    "Scrap Count": "Schrottzahl",
+    "Scrap Code": "Schrottcode",
+    "Scrap Definition": "Schrottdefinition",
+    "New Setup Scrap Entry": "Neuer Setup-Schrotteintrag",
+    "New Production Scrap Entry": "Neuer Eintrag für Produktionsschrott",
+    "Production Scrap": "Produktionsschrott",
+    "Search/Select Scrap Code": "Schrottcode Suchen/auswählen",
+    "Success": "Erfolg",
+    "Error": "Error",
+    "Scrap Entries Saved": "Schrotteinträge Gespeichert",
+    "Scrap Quantity": "Schrottmenge",
+    "Scrap Type": "Schrotttyp",
+    "Select Setup Code": "Wählen Sie Setup Code",
+    "Select Production Code": "Wählen Sie Produktionscode",
+    "Select Responsible Area": "Wählen Sie Verantwortlicher Bereich",
+    "Responsible": "Verantwortlich",
+    "Operator Count": "Anzahl der Bediener",
+    "Check Out Operators": "Check Out Operators",
+    "Active Operators": "Überprüfen Sie die Operatoren",
+    "No active operators to check out": "Keine aktiven Operatoren zum Auschecken",
+    "New Operator Check In": "Neuer Operator einchecken",
+    "Please select the users to check out from this station": "Bitte wählen Sie die Benutzer aus, die von dieser Station auschecken sollen",
+    "Check Out": "Auschecken",
+    "Check In": "Einchecken",
+    "Check-Out": "Auschecken",
+    "Action": "Aktion",
+    "Expected Return": "Erwartete Rückkehr",
+    "Closed By": "Geschlossen Durch",
+    "Sign Out Reason": "Grund für die Abmeldung",
+    "Please select what is the reason to sign out": "Bitte wählen Sie den Grund für die Abmeldung aus",
+    "Begin Lunch": "Beginnen Sie mit dem Mittagessen",
+    "Begin Break": "Pause Beginnen",
+    "Exit Station": "Verlassen Sie die Station",
+    "Attention": "Beachtung",
+    "Please select which role you will perform at this station today": "Bitte wählen Sie aus, welche Rolle Sie heute an dieser Station spielen werden",
+    "Continue As Operator": "Weiter als Operator",
+    "Continue As Supervisor": "Weiter als Supervisor",
 
     "Site Administration": "Standort Administration",
     "Excel Import/Export": "Excel Importieren/Exportieren",
