--- a/ui/src/Utils/locale/EN-US.json
+++ b/ui/src/Utils/locale/EN-US.json
@@ -111,10 +111,10 @@
     "Intershift Communication was not inserted": "Intershift Communication was not inserted",
     "Intershift Communications": "Intershift Communications",
     "Comment was inserted": "Comment was inserted",
-    "Manual Entry Succesfully Inserted": "handmatige invoer succesvol ingevoerd",
+    "Manual Entry Succesfully Inserted": "Manual Entry Successfully Inserted",
     "Value was inserted": "Value was inserted",
     "Signoff was inserted": "Signoff was inserted",
-    "Tmeloss was inserted": "Signoff was inserted",
+    "Tmeloss was inserted": "Timeloss was inserted",
     "Site Configuration Import/Export Tool": "Site Configuration Import/Export Tool",
     "Select an action": "Select an action",
     "Please choose the Configuration Items to": "Please choose the Configuration Items to",
@@ -131,9 +131,33 @@
     "Success": "Success",
     "Error": "Error",
     "Scrap Entries Saved": "Scrap Entries Saved",
-
-
-
+    "Scrap Quantity": "Scrap Quantity",
+    "Scrap Type": "Scrap Type",
+    "Select Setup Code": "Select Setup Code",
+    "Select Production Code": "Select Production Code",
+    "Select Responsible Area": "Select Responsible Area",
+    "Responsible": "Responsible",
+    "Operator Count": "Operator Count",
+    "Check Out Operators": "Check Out Operators",
+    "Active Operators": "Active Operators",
+    "No active operators to check out": "No active operators to check out",
+    "New Operator Check In": "New Operator Check In",
+    "Please select the users to check out from this station": "Please select the users to check out from this station",
+    "Check Out": "Check Out",
+    "Check In": "Check In",
+    "Check-Out": "Check Out",
+    "Action": "Action",
+    "Expected Return": "Expected Return",
+    "Closed By": "Closed By",
+    "Sign Out Reason": "Sign Out Reason",
+    "Please select what is the reason to sign out": "Please select what is the reason to sign out",
+    "Begin Lunch": "Begin Lunch",
+    "Begin Break": "Begin Break",
+    "Exit Station": "Exit Station",
+    "Attention": "Attention",
+    "Please select which role you will perform at this station today": "Please select which role you will perform at this station today",
+    "Continue As Operator": "Continue As Operator",
+    "Continue As Supervisor": "Continue As Supervisor",
 
     "Site Administration": "Site Administration",
     "Excel Import/Export": "Excel Import/Export",
