--- a/ui/src/Utils/locale/ES.json
+++ b/ui/src/Utils/locale/ES.json
@@ -131,10 +131,34 @@
     "Success": "Éxito",
     "Error": "Error",
     "Scrap Entries Saved": "Desperdicio Guardado",
-    
+    "Scrap Quantity": "Cantidad de Desperdicio",
+    "Scrap Type": "Tipo de Desperdicio",
+    "Select Setup Code": "Seleccione un Código de Configuración",
+    "Select Production Code": "Seleccione un Código de Producción",
+    "Select Responsible Area": "Seleccione el Area Responsable",
+    "Responsible": "Responsable",
+    "Operator Count": "Recuento de Operadores",
+    "Check Out Operators": "Desconectar Operadores",
+    "Active Operators": "Operadores Activos",
+    "No active operators to check out": "No hay operadores activos para desconectar",
+    "New Operator Check In": "Conectar un nuevo Operador",
+    "Please select the users to check out from this station": "Por favor seleccione los usuarios que desea desconectar de esta máquina",
+    "Check Out": "Desconectar",
+    "Check In": "Ingreso",
+    "Check-Out": "Salida",
+    "Action": "Acción",
+    "Expected Return": "Regreso Esperado",
+    "Closed By": "Desconectado Por",
+    "Sign Out Reason": "Rason de Desconexión",
+    "Please select what is the reason to sign out": "Por favor seleccione cuál es la rason de la desconexión",
+    "Begin Lunch": "Almuerzo",
+    "Begin Break": "Receso",
+    "Exit Station": "Salir de la Máquina",
+    "Attention": "Atención",
+    "Please select which role you will perform at this station today": "Por favor seleccione el rol con el que va a ingresar hoy a esta máquina",
+    "Continue As Operator": "Continuar como Operador",
+    "Continue As Supervisor": "Continuar como Supervisor",
 
-
-    
     "Site Administration": "Administración de la Planta",
     "Excel Import/Export": "Importar/Exportar Excel",
     "Users": "Usuarios",
